<resources>
    <string name="app_name">Disney Movies</string>
    <string name="button_addMovie">Add Movie</string>
    <string name="hint_movieTitle">Movie Title</string>
    <string name="hint_movieYear">Year of Release</string>
    <string name="hint_movieDirector">Directed by</string>
    <string name="hint_movieDescription">Movie Description</string>
    <string name="menu_addMovie">Add</string>
    <string name="menu_cancelMovie">Cancel</string>
    <string name="menu_deleteMovie">Delete</string>
    <string name="enter_movie_title">Please enter a Movie Title </string>
    <string name="enter_movie_year">Please enter a valid Year of Release </string>
    <string name="enter_movie_director">Please enter the Director(s) </string>
    <string name="save_movie">Save Movie </string>
    <string name="button_addImage">Add Image </string>
    <string name="select_movie_image">Select Movie Image</string>
    <string name="change_movie_image">Change Image</string>
    <string name="movie_image">Movie Image</string>
    <string name="button_IMDB">Search this movie on IMDB</string>
    <string name="button_location">Add Location</string>
    <string name="location_info">This is a rough estimate of where the storyline is based. This step is optional.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_g_maps">Map</string>
    <string name="rate_movie_text">Rate this movie: </string>
    <string name="change_button_location">Change Location</string>
    <string name="title_activity_youtube">YoutubeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>